SMHE-1276: Fix handling of values when using selective access
Signed-off-by: stefanermens <stefan.ermens@alliander.com>